--- a/frontend/src/app/dashboard/menu/menu.component.html
+++ b/frontend/src/app/dashboard/menu/menu.component.html
@@ -4,66 +4,71 @@
   </button>
   <div class="d-flex align-items-center justify-content-between w-100">
     <div class="example-spacer">
-      <span>Eber Ride</span>
+      <span>RideEZ</span>
       <!-- <img src="../../assets/images/eber logo.png" alt="Logo">  -->
     </div>
-    <div >
+    <div>
       <!-- <button [matMenuTriggerFor]="lvl1master" mat-button>Master</button> -->
       <button class="btn btn-danger" (click)="onLogout()">
         <i class="fa fa-lock" aria-hidden="true"></i> &nbsp; Logout
       </button>
-      
+
     </div>
   </div>
-  </mat-toolbar>
+</mat-toolbar>
 
 
 
-<mat-drawer-container autosize >
-  <mat-drawer class="bg-dark"  #drawer opened="false" mode="side" position="start" >
-  <mat-nav-list >
-      <mat-list-item >
-          <button  color="accent" mat-button><mat-icon>dashboard</mat-icon> Dashboard</button>
+<mat-drawer-container autosize>
+  <mat-drawer class="bg-dark" #drawer opened="false" mode="side" position="start">
+    <mat-nav-list>
+      <mat-list-item>
+        <button color="accent" mat-button><mat-icon>dashboard</mat-icon> Dashboard</button>
       </mat-list-item>
       <mat-list-item>
-        <button [matMenuTriggerFor]="lvl1master"  color="accent" mat-button><mat-icon>local_taxi</mat-icon> Rides</button>
+        <button [matMenuTriggerFor]="lvl1master" color="accent" mat-button><mat-icon>local_taxi</mat-icon>
+          Rides</button>
         <mat-menu #lvl1master="matMenu">
-          <button  color="accent" routerLink="createride"   mat-menu-item><mat-icon>calendar_month</mat-icon>Create Ride</button>
-          <button routerLink="confirmride"  mat-menu-item><mat-icon>check_circle </mat-icon>Confirmed Rides</button>
-          <button routerLink="ridehistory"  mat-menu-item><mat-icon>history_toggle_off</mat-icon> Ride History</button>
-      </mat-menu>
-    </mat-list-item>
+          <button color="accent" routerLink="createride" mat-menu-item><mat-icon>calendar_month</mat-icon>Create
+            Ride</button>
+          <button routerLink="confirmride" mat-menu-item><mat-icon>check_circle </mat-icon>Confirmed Rides</button>
+          <button routerLink="ridehistory" mat-menu-item><mat-icon>history_toggle_off</mat-icon> Ride History</button>
+        </mat-menu>
+      </mat-list-item>
 
       <mat-list-item>
-          <button routerLink="users" color="accent"  mat-button><mat-icon>person</mat-icon>Users</button>
+        <button routerLink="users" color="accent" mat-button><mat-icon>person</mat-icon>Users</button>
       </mat-list-item>
       <mat-list-item>
-        <button [matMenuTriggerFor]="lvl2master" color="accent"  mat-button><mat-icon>account_circle</mat-icon>Drivers</button>
+        <button [matMenuTriggerFor]="lvl2master" color="accent"
+          mat-button><mat-icon>account_circle</mat-icon>Drivers</button>
         <mat-menu #lvl2master="matMenu">
-            <button routerLink="driver"  mat-menu-item><mat-icon>format_list_bulleted</mat-icon>List</button>
-            <button  routerLink="runningrequest" mat-menu-item><mat-icon>play_circle_outline</mat-icon>Running request</button>
+          <button routerLink="driver" mat-menu-item><mat-icon>format_list_bulleted</mat-icon>List</button>
+          <button routerLink="runningrequest" mat-menu-item><mat-icon>play_circle_outline</mat-icon>Running
+            request</button>
         </mat-menu>
       </mat-list-item>
       <mat-list-item>
-          <button  [matMenuTriggerFor]="lvl3master" color="accent"  mat-button><mat-icon>monetization_on</mat-icon> Pricing</button>
-          <mat-menu #lvl3master="matMenu">
-            <button  routerLink="country" mat-menu-item><mat-icon>language</mat-icon>Country</button>
-            <button routerLink="city"  mat-menu-item><mat-icon>language</mat-icon>City</button>
-            <button  routerLink="vehicletype" mat-menu-item><mat-icon> directions_car</mat-icon> Vehicle type</button>
-            <button  routerLink="vehiclepricing" mat-menu-item><mat-icon> monetization_on</mat-icon>Vehicle Pricing</button>
+        <button [matMenuTriggerFor]="lvl3master" color="accent" mat-button><mat-icon>monetization_on</mat-icon>
+          Pricing</button>
+        <mat-menu #lvl3master="matMenu">
+          <button routerLink="country" mat-menu-item><mat-icon>language</mat-icon>Country</button>
+          <button routerLink="city" mat-menu-item><mat-icon>language</mat-icon>City</button>
+          <button routerLink="vehicletype" mat-menu-item><mat-icon> directions_car</mat-icon> Vehicle type</button>
+          <button routerLink="vehiclepricing" mat-menu-item><mat-icon> monetization_on</mat-icon>Vehicle
+            Pricing</button>
         </mat-menu>
       </mat-list-item>
       <mat-list-item>
-          <button color="accent" routerLink="setting" mat-button><mat-icon>settings</mat-icon> Settings</button>
+        <button color="accent" routerLink="setting" mat-button><mat-icon>settings</mat-icon> Settings</button>
       </mat-list-item>
-  </mat-nav-list>
+    </mat-nav-list>
   </mat-drawer>
   <mat-drawer-content>
-      <div style="text-align: center;min-height: 600px;">
-          <router-outlet></router-outlet>
-          <!-- <img src="../../../assets/images/pexels-sebastiaan-stam-1097456.jpg" alt="home"> -->
-          
-      </div>
+    <div style="text-align: center;min-height: 600px;">
+      <router-outlet></router-outlet>
+      <!-- <img src="../../../assets/images/pexels-sebastiaan-stam-1097456.jpg" alt="home"> -->
+
+    </div>
   </mat-drawer-content>
 </mat-drawer-container>
-
